Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Various upgrade fixes that stopped an upgrade from CPS 3.2.4.
- The member folder path got reset on any kind of import.
- Remove certain allowed portal types from Sections, as they were also removed
  from Workspaces
- Remove 'Last login' option in a search form if member doesn't have
  a 'last_login_time' property.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Add css class for comments display listed.