@@ -14,4 +14,6 @@ Bug fixes:
   a 'last_login_time' property.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
-- Add css class for comments display listed.
+- Add CSS class for comments display listed.
+- Reenabled the CSS validation tests but now using a local W3C CSS validator if
+  one is found.
